# OpenGLGame

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  configure.sh  main.cpp  run.sh
dependencies/glew-2.2.0/include/: CMakeLists.txt
glew-2.2.0/lib/: libGLEW.so.2.2.0
include/: CMakeLists.txt
